# junmit

./: .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
public/fonts/: D2Coding-LICENSE.md
resources/: install.sh
resources/.claude/: CLAUDE.md
resources/lib/: apply-corrections.sh  diarize.sh  local_meeting.py  local_rules.md  pyannote_diarize.py  signal.sh  transcribe.sh
resources/templates/: 1on1.md  note.md  presentation.md  retrospective.md  review.md
scripts/: build-binaries.sh  gen-agent-skills.sh  install-app.sh  release-tag.sh  release.sh
scripts/licenses/: about.hbs  about.toml  header.md  regen.sh
src/: App.module.css  App.tsx  constants.ts  main.tsx  router.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  pty.rs  session.rs  telemetry.rs
src/contexts/: DialogContext.tsx  RecorderContext.tsx  SessionContext.tsx  ToastContext.tsx  UpdateContext.tsx
src/hooks/: useAtlassianLogin.ts  useNavigationBlocker.ts  useRecorder.ts  useRecordingAutoStop.ts  useRecordingNotes.ts  useRecordingReminder.ts  useRecordingTray.ts  useTemplateSession.ts  useTranscriptNotes.ts
src/screens/: AppShell.tsx  ErrorScreen.tsx  HistoryScreen.tsx  HomeScreen.tsx  LoadingScreen.tsx  MeetingTypeCreateScreen.tsx  MeetingTypeDetailScreen.tsx  MeetingTypes.module.css  MeetingTypesListScreen.tsx  RecordingScreen.tsx  ReminderWindow.tsx  SessionScreen.tsx  Settings.module.css  SettingsAiToolScreen.tsx  SettingsLicensesScreen.tsx  SettingsPermissionsScreen.tsx  SettingsScreen.tsx  SettingsUpdateScreen.tsx  (+2 more)
(+176 files in other folders)
