[package]
name = "junmit-app"
version = "0.4.1"
edition = "2021"
license = "MIT"
publish = false  # 애플리케이션 crate — crates.io 발행 대상 아님 (cargo-about도 자기 자신 제외)

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"  # 자동 업데이트 설치 후 relaunch
tauri-plugin-log = "2"      # 로컬 파일 로그 (~/Library/Logs/app.junmit/) — 진단 단일 저장소
log = "0.4"                 # 로깅 파사드 (eprintln 대체)
sentry = "0.42"             # 에러·Rust panic·네이티브 크래시 수집 (release+opt-in 게이트)
tauri-plugin-sentry = "0.5" # JS 에러 자동 후킹 + minidump. sentry crate와 컨텍스트 병합
tauri-plugin-aptabase = "1" # 익명 사용량 이벤트 (프라이버시 우선, 고유 식별자 없음)
portable-pty = "0.9"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread"] }  # aptabase 플러그인이 init에서 tokio::spawn 호출 → 런타임 컨텍스트 필요

[build-dependencies]
tauri-build = { version = "2", features = [] }
